# RSS

./: Cargo.toml
canonical_flatten/: Cargo.toml
canonical_flatten/canonical_flatten_derive/: Cargo.toml
canonical_flatten/canonical_flatten_derive/src/: lib.rs
canonical_flatten/src/: lib.rs
scripts/: README.md  issue-vc-didkit.sh
src/: blind_signature.rs  keys.rs  lib.rs  pok_sig.rs  pok_vc.rs  rsssig.rs  signature.rs
src/message_structure/: did.rs  flat_vc.rs  message_encode.rs  mod.rs  signed_vc.rs  vc.rs
tests/: rsignature_for_vc.rs
