[package]
name = "ps_sig"
version = "0.2.0"
authors = ["lovesh <lovesh.bond@gmail.com>"]
edition = "2018"
description = "Pointcheval Sanders signatures"
license = "Apache-2.0"
repository = "https://github.com/lovesh/ps-sig"

[dependencies]
rand = "0.7"
failure = "0.1.5"
serde = "1.0"
serde_derive = "1.0"
sha2 ="0.10.6"
hex-literal = "0.3.4"
serde_json = "1.0.96"
canonical_flatten = { path = "./canonical_flatten" }

[dependencies.amcl_wrapper]
version = "0.3"
default-features = false
features = ["bls381"]

[features]
default = ["SignatureG2"]
SignatureG2 = []
SignatureG1 = []
